# az-vmsearch

./: README.md  cli.py  pyproject.toml
az_vmsearch/: check_if_vm_exists.py  cloudprice.py  create_vm_family.py  get_quota_data.py  get_vms.py  main.py
az_vmsearch/data/: regions.py  types.py
tests/: test_check_if_vm_exists.py  test_cli.py  test_cloudprice.py  test_create_vm_family.py  test_get_quota_data.py  test_get_vms.py  test_main.py
