[tool.poetry]
name = "az-vmsearch"
version = "0.1.0"
description = ""
authors = ["Matthias Osswald <info@busykoala.io>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]

[tool.ruff.lint.isort]
force-single-line = true
